--- a/quiz2/cities_2.html
+++ b/quiz2/cities_2.html
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="../css/fonts.css" />
     <link type="text/css" rel="stylesheet" href="../css/quiz.css" />
     <link type="text/css" rel="stylesheet" href="../css/drag_drop.css" />
+    <link type="text/css" rel="stylesheet" href="../css/note_cities.css" />
+    <link type="text/css" rel="stylesheet" href="../css/note_bw.css" />
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/adaptive-modal.css" />
     <!--<link type="text/css" rel="stylesheet" href="../css/jquery-ui.min.css" />-->
@@ -19,7 +21,7 @@
 </head>
 
 
-<body>
+<body class="body_class_white">
 <div class="container grey_background"><!-- yes -->
    <div class="row-fluid margin_left_30">
 
@@ -33,11 +35,11 @@
               
             </div> <!-- row-fluid -->
 
-        <div id="quiz_container" class="container-fluid border_curved margin_bottom_20 orange_background"><!-- yes -->
+       <div id="quiz_container" class="container-fluid quiz_container_yellow"><!-- yes -->
 
        <div class="row-fluid">
 
-                <div class="col-md-3"></div>
+                <div class="col-md-3"><button type="submit" class="btn btn-primary margin_top_button button_css">Change Theme</button></div>
                     <ul class="nav nav-tabs" role="tablist">
                           <li class="font_nav_bar_subj margin_left_30"><a href="space_2.html">&nbsp;Space&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="countries_2.html">&nbsp;Countries&nbsp;</a></li>
@@ -48,7 +50,7 @@
  <div class="col-md-12" style="margin-top:10px;">
           <div class="margin_top_btm_15 Arial_Rd_Grey_30">Arrange these Cities in order of population </div>
 
-           <div id="bigrow_cities">
+           <div id="bigrow_cities" class="bigrow_cities">
 
             <div id="bigrow1" class="bigrow1_cities bigrow_no_border"></div>
             <div id="bigrow2" class="bigrow2_cities bigrow_no_border"></div>
@@ -62,7 +64,7 @@
            </div>
 
            <div clas="row">
-           <div id="textzone_cities" class="col-md-4"><p class="cities_facts">Cities Facts</p>
+           <div id="textzone_cities" class="col-md-4 textzone_cities note" style="margin-right:15px;"><p class="cities_facts">Cities Facts</p>
             
             <div id="tokyo_text" class="section">
               <p class="font_cities_name">Tokyo</p>
@@ -113,10 +115,11 @@
 
            </div>
 
-               <div id="dragzone_cities" class="col-md-8">
+               <div id="dragzone_cities" class="col-md-8 dragzone_cities" style="margin-right:-15px;">
 
-                 <div id="welldone_cities" class="col-md-4">
+                 <div id="welldone_cities" class="col-md-6">
                   <span class="cities_facts">Well Done!</span><br /><br />
+                  <span class="font_cities_name">Cities in order of population:</span><br />
                   <span class="font_cities_name"> Tokyo</span> <span class="font_cities_para">34.9 million</span><br />
                   <span class="font_cities_name"> Canton</span> <span class="font_cities_para">32.3 million </span><br />
                   <span class="font_cities_name"> Shanghai</span> <span class="font_cities_para">29.4 million</span><br />
@@ -185,6 +188,7 @@
 <script type="text/javascript" src="../js/jquery-ui.min.js"></script>-->
 <script type="text/javascript" src="../js/quiz2_dragdrop_cities2.js"></script>
 <script type="text/javascript" src="../js/hide_div.js"></script>
+<script type="text/javascript" src="../js/toggle_css.js"></script>
 
 
 
