--- a/quiz2/space_2.html
+++ b/quiz2/space_2.html
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="../css/fonts.css" />
     <link type="text/css" rel="stylesheet" href="../css/quiz.css" />
     <link type="text/css" rel="stylesheet" href="../css/drag_drop.css" />
+    <link type="text/css" rel="stylesheet" href="../css/note_space.css" />
+    <link type="text/css" rel="stylesheet" href="../css/note_bw.css" />
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/adaptive-modal.css" />
     <!--<link type="text/css" rel="stylesheet" href="../css/jquery-ui.min.css" />-->
@@ -19,7 +21,7 @@
 </head>
 
 
-<body>
+<body class="body_class_white">
 <div class="container grey_background"><!-- yes -->
     <div class="row-fluid margin_left_30">
 
@@ -33,11 +35,11 @@
               
             </div> <!-- row-fluid -->
 
-        <div id="quiz_container" class="container-fluid border_curved margin_bottom_20 Q2_background"><!-- yes -->
+        <div id="quiz_container" class="container-fluid quiz_container_blue"><!-- yes -->
 
        <div class="row-fluid">
 
-                <div class="col-md-3"></div>
+                <div class="col-md-3"><button type="submit" class="btn btn-primary margin_top_button button_css">Change Theme</button></div>
                     <ul class="nav nav-tabs" role="tablist">
                           <li class="active font_nav_bar_subj margin_left_30"><a href="space_2.html">&nbsp;Space&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="countries_2.html">&nbsp;Countries&nbsp;</a></li>
@@ -49,7 +51,7 @@
  <div class="col-md-12" style="margin-top:10px;">
            <div class="Arial_Rd_Grey_30 margin_top_btm_15">Arrange our Solar System</div>
 
-           <div id="bigrow_space">
+           <div id="bigrow_space" class="bigrow_space">
 
             <div id="bigrow1" class="bigrow1_space bigrow_no_border"></div>
             <div id="bigrow2" class="bigrow2_space bigrow_no_border"></div>
@@ -63,7 +65,7 @@
            </div>
 
            <div clas="row">
-           <div id="textzone_space" class="col-md-4"><p class="solar_facts">Solar System Facts</p>
+           <div id="textzone_space" class="col-md-4 textzone_space note" style="margin-right:15px;"><p class="solar_facts">Solar System Facts</p>
 
             <div id="mercury_text" class="section">
               <p class="font_planet_name">Mercury</p>
@@ -221,7 +223,21 @@
 
            </div>
 
-               <div id="dragzone_space" class="col-md-8">
+               <div id="dragzone_space" class="col-md-8 dragzone_space" style="margin-right:-15px;">
+
+                <div id="welldone_space" class="col-md-6">
+                  <span class="solar_facts">Well Done!</span><br /><br />
+                  <span class="font_planet_name">The planets' distances in km from the Sun:</span><br />
+                  <span class="font_planet_name"> Mercury</span> <span class="font_planet_para">46 million km</span><br />
+                  <span class="font_planet_name"> Venus</span> <span class="font_planet_para">107 million km </span><br />
+                  <span class="font_planet_name"> Earth</span> <span class="font_planet_para">147 million km </span><br />
+                  <span class="font_planet_name"> Mars</span> <span class="font_planet_para">205 million km </span><br />
+                  <span class="font_planet_name"> Jupiter</span> <span class="font_planet_para">741 million km</span><br />
+                  <span class="font_planet_name"> Saturn</span> <span class="font_planet_para">1.35 billion km </span><br />
+                  <span class="font_planet_name"> Uranus</span> <span class="font_planet_para">2.75 billion km </span><br />
+                  <span class="font_planet_name"> Neptune</span> <span class="font_planet_para">4.45 billion km </span>
+                </div>
+
                   <div id="drag_empty1"></div> 
 
                   <div id="drag_solar1" class="earth"> 
@@ -277,6 +293,7 @@
 <script type="text/javascript" src="../js/jquery-ui.min.js"></script>-->
 <script type="text/javascript" src="../js/quiz2_dragdrop_space2.js"></script>
 <script type="text/javascript" src="../js/hide_div.js"></script>
+<script type="text/javascript" src="../js/toggle_css.js"></script>
 
 
 
