updated fonts on images etc

--- a/quiz3/space_3.html
+++ b/quiz3/space_3.html
@@ -16,6 +16,8 @@
     <link type="text/css" rel="stylesheet" href="../css/jquery-ui.structure.min.css" />
     <!--<link type="text/css" rel="stylesheet" href="../css/jquery-ui.theme.min.css" />-->
 
+<!--below is from http://scrollback.io enabling an instant private chat room called elearning to be set up -->
+ <script>window.scrollback = {room:"elearning",embed:"toast",theme:"light",minimize:true};(function(d,s,h,e){e=d.createElement(s);e.async=1;e.src=(location.protocol === "https:" ? "https:" : "http:") + "//scrollback.io/client.min.js";d.getElementsByTagName(s)[0].parentNode.appendChild(e);}(document,"script"));</script>
    
 </head>
 
@@ -127,6 +129,12 @@
           </div> <!-- col-md-12 -->
 
 </div> <!-- row-fluid -->
+
+ <div> 
+    <object type="text/html" data="https://www.hipchat.com/gB5NcM9Uy" width="1120px" height="600px" style="overflow:auto;border:1px ridge blue">
+    </object></div>
+
+
 </div> <!-- container -->
 
 
