--- a/quiz3/cities_3.html
+++ b/quiz3/cities_3.html
@@ -16,7 +16,9 @@
     <link type="text/css" rel="stylesheet" href="../css/jquery-ui.structure.min.css" />
     <!--<link type="text/css" rel="stylesheet" href="../css/jquery-ui.theme.min.css" />-->
 
-   
+   <!--below is from http://scrollback.io enabling an instant private chat room called elearning to be set up -->
+    <script>window.scrollback = {room:"elearning",embed:"toast",theme:"light",minimize:true};(function(d,s,h,e){e=d.createElement(s);e.async=1;e.src=(location.protocol === "https:" ? "https:" : "http:") + "//scrollback.io/client.min.js";d.getElementsByTagName(s)[0].parentNode.appendChild(e);}(document,"script"));</script>
+
 </head>
 
 
