space Q3 now has pop up of links on completion

--- a/quiz3/space_3.html
+++ b/quiz3/space_3.html
@@ -40,7 +40,7 @@
 
        <div class="row-fluid">
 
-                <div class="col-md-3"></div>
+                <div class="col-md-3"><button type="submit" id="forum_btn" class="btn btn-primary margin_top_button button_css">Class Forum</button></div>
                     <ul class="nav nav-tabs" role="tablist">
                           <li class="active font_nav_bar_subj margin_left_30"><a href="space_3.html">&nbsp;Space&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="countries_3.html">&nbsp;Countries&nbsp;</a></li>
@@ -48,6 +48,9 @@
                           <li class="font_nav_bar_subj"><a href="biology_3.html">&nbsp;Biology&nbsp;</a></li>
                     </ul>
 
+     <div id="forum"> 
+    <object type="text/html" data="https://www.hipchat.com/gB5NcM9Uy" width="1120px" height="600px" style="overflow:auto;border:1px ridge blue">
+    </object></div>
 
           <div class="col-md-12" style="margin-top:50px;">
 
@@ -96,6 +99,63 @@
             </div>
 
             <div id="planets_info">
+
+                <div id="Q3_more_info" class="col-md-6">
+
+                  <span class="solar_facts">Well Done!</span><br />
+                  <span class="more_infoQ3">Follow these recommended links for more information and further study:</span><br />
+
+                  <div class="col-md-6">
+                    <span class="font_planet_nameQ3">Mercury: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/mercury/" target="_blank">More Mercury facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://www.nasa.gov/mission_pages/messenger/main/#.U9ofh0jdAZs" target="_blank">NASA's Mercury mission</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Mercury&Display=Gallery" target="_blank">NASA's Mercury Gallery</a> </span><br />
+
+
+                    <span class="font_planet_nameQ3">Venus: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/venus/" target="_blank">More Venus facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Venus&Display=Gallery" target="_blank">NASA's Venus Gallery</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://science.nationalgeographic.com/science/photos/venus/#/wheatley-crater_1288_600x450.jpg" target="_blank">National Geographics's Venus Gallery</a> </span><br />
+                     <span class="font_more_info_link"> <a href="http://www.space.com/12437-venus-photos-planets-venusian-solar-system.html" target="_blank">Space.com's Venus Gallery</a> </span><br />
+
+                    <span class="font_planet_nameQ3">Earth: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/earth/" target="_blank">More Earth facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://planetary.org/explore/space-topics/earth/pics-of-earth-by-planetary-spacecraft.html" target="_blank">The planetary society</a> </span><br />
+                     <span class="font_more_info_link"> <a href="http://science.nationalgeographic.com/science/photos/earth-moon-gallery/" target="_blank">National Geographics's Earth Gallery</a> </span><br />
+                
+                    <span class="font_planet_nameQ3">Mars: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/mars/" target="_blank">More Mars facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://www.nasa.gov/mission_pages/mars/images/" target="_blank">NASA's Mars gallery</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://www.space.com/18027-mars-rover-curiosity-amazing-photos-red-planet.html" target="_blank">Space.com's Mars gallery</a> </span><br />
+                   </div>
+
+                   <div class="col-md-6">
+
+                    <span class="font_planet_nameQ3">Jupiter: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/jupiter/" target="_blank">More Jupiter facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Jupiter&Display=Gallery" target="_blank">NASA's Jupiter gallery</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://hubblesite.org/gallery/album/solar_system/jupiter/" target="_blank">Hubble's Jupiter photos</a> </span><br />
+
+                     <span class="font_planet_nameQ3">Saturn: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/saturn/" target="_blank">More Saturn facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://saturn.jpl.nasa.gov/photos/" target="_blank">Cassini's Saturn photos</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://www.telegraph.co.uk/science/picture-galleries/10129199/Stunning-images-taken-on-Nasa-Cassini-spacecrafts-mission-to-Saturn.html" target="_blank">More Saturn Photos!</a> </span><br />
+
+                    <span class="font_planet_nameQ3">Uranus: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/uranus/" target="_blank">More Uranus facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Uranus&Display=Gallery" target="_blank">NASA's Uranus gallery</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://hubblesite.org/gallery/album/solar_system/uranus/" target="_blank">Hubble Uranus photos</a> </span><br />
+
+                    <span class="font_planet_nameQ3">Neptune: </span><br />
+                    <span class="font_more_info_link"> <a href="http://space-facts.com/neptune/" target="_blank">More Neptune facts!</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://solarsystem.nasa.gov/planets/profile.cfm?Object=Neptune&Display=Gallery" target="_blank">NASA's Neptune gallery</a> </span><br />
+                    <span class="font_more_info_link"> <a href="http://voyager.jpl.nasa.gov/gallery/neptune.html" target="_blank">Voyager Neptune photos</a> </span><br />
+                  </div>
+
+                </div>
+
+
+
                  <div id="drag_space5" class="jupiter"> <img src="../images/jupiter_Q3.png" alt="jupiter"></div> 
                  <div id="drag_space4" class="mars"> <img src="../images/mars_Q3.png" alt="mars"></div> 
                  <div id="drag_space2" class="venus"> <img src="../images/venus_Q3.png" alt="venus"></div> 
@@ -130,9 +190,7 @@
 
 </div> <!-- row-fluid -->
 
- <div> 
-    <object type="text/html" data="https://www.hipchat.com/gB5NcM9Uy" width="1120px" height="600px" style="overflow:auto;border:1px ridge blue">
-    </object></div>
+
 
 
 </div> <!-- container -->
@@ -149,7 +207,7 @@
 <!--<script type="text/javascript" src="../js/jquery-ui.js"></script>
 <script type="text/javascript" src="../js/jquery-ui.min.js"></script>-->
 <script type="text/javascript" src="../js/quiz3_dragdrop_space3.js"></script>
-<script type="text/javascript" src="../js/hide_div.js"></script>
+<script type="text/javascript" src="../js/hide_forum.js"></script>
 
 
 
