changed css, ordering, added php links

--- a/quiz1/cities_1.html
+++ b/quiz1/cities_1.html
@@ -17,9 +17,9 @@
 <div class="container grey_background"><!-- yes -->
    <div class="row-fluid margin_left_30">
 
-            <div class="col-md-10 col-md-offset-2"><img src="../images/title.png" alt="title e-learning episodes"> </div>
+            <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
-                      <ul class="nav nav-tabs col-md-offset-4" role="tablist">
+                      <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
                          <li class="active font_nav_bar_quiz margin_left_35"><a href="space_1.html">&nbsp;Quiz 1&nbsp;</a></li>
                          <li class="font_nav_bar_quiz"><a href="../quiz2/space_2.html">&nbsp;Quiz 2&nbsp;</a></li>
                          <li class="font_nav_bar_quiz"><a href="../quiz3/space_3.html">&nbsp;Quiz 3&nbsp;</a></li>
