--- a/quiz2/cities_2.html
+++ b/quiz2/cities_2.html
@@ -25,9 +25,9 @@
 <div class="container grey_background"><!-- yes -->
    <div class="row-fluid margin_left_30">
 
-            <div class="col-md-10 col-md-offset-2"><img src="../images/title.png" alt="title e-learning episodes"> </div>
+            <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
-                      <ul class="nav nav-tabs col-md-offset-4" role="tablist">
+                      <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
                          <li class="font_nav_bar_quiz margin_left_35"><a href="../quiz1/space_1.html">&nbsp;Quiz 1&nbsp;</a></li>
                          <li class="active font_nav_bar_quiz"><a href="space_2.html">&nbsp;Quiz 2&nbsp;</a></li>
                          <li class="font_nav_bar_quiz"><a href="../quiz3/space_3.html">&nbsp;Quiz 3&nbsp;</a></li>
@@ -135,25 +135,28 @@
 
                   <div id="drag_empty1"></div> 
 
-                  <div id="drag_cities1" class="tokyo"> 
-                  <a href="#" onclick="toggle_visibility('tokyo_text');"><img src="../images/tokyo_pic.jpg" alt="tokyo"></a></a></div> 
+                   <div id="drag_cities5" class="seoul"> 
+                    <a href="#" onclick="toggle_visibility('seoul_text');"> <img src="../images/seoul_pic.jpg" alt="seoul"></a></div> 
 
                   <div id="drag_empty2"></div> 
 
-                  <div id="drag_cities2" class="canton"> 
-                  <a href="#" onclick="toggle_visibility('canton_text');"> <img src="../images/canton_pic.jpg" alt="canton"></a></div> 
+                 <div id="drag_cities8" class="new_york"> 
+                    <a href="#" onclick="toggle_visibility('new_york_text');"><img src="../images/newyork_pic.jpg" alt="new_york"></a></div> 
 
                   <div id="drag_cities3" class="shanghai"> 
                     <a href="#" onclick="toggle_visibility('shanghai_text');"><img src="../images/shanghai_pic.jpg" alt="shanghai"></a></div> 
 
+                     <div id="drag_cities1" class="tokyo"> 
+                  <a href="#" onclick="toggle_visibility('tokyo_text');"><img src="../images/tokyo_pic.jpg" alt="tokyo"></a></a></div> 
+
                   <div id="drag_cities4" class="jakarta"> 
                     <a href="#" onclick="toggle_visibility('jakarta_text');"> <img src="../images/jakarta_pic.jpg" alt="jakarta"></a></div> 
                   
-                  <div id="drag_cities5" class="seoul"> 
-                    <a href="#" onclick="toggle_visibility('seoul_text');"> <img src="../images/seoul_pic.jpg" alt="seoul"></a></div> 
-
                   <div id="drag_cities6" class="delhi"> 
                    <a href="#" onclick="toggle_visibility('delhi_text');"> <img src="../images/delhi_pic.jpg" alt="delhi"></a></div> 
+
+                     <div id="drag_cities2" class="canton"> 
+                  <a href="#" onclick="toggle_visibility('canton_text');"> <img src="../images/canton_pic.jpg" alt="canton"></a></div> 
 
                   <div id="drag_cities7" class="mumbai"> 
                     <a href="#" onclick="toggle_visibility('mumbai_text');"><img src="../images/mumbai_pic.jpg" alt="mumbai"></a></div> 
@@ -161,8 +164,7 @@
                   <div id="drag_empty6"></div> 
                   <div id="drag_empty7"></div> 
 
-                  <div id="drag_cities8" class="new_york"> 
-                    <a href="#" onclick="toggle_visibility('new_york_text');"><img src="../images/newyork_pic.jpg" alt="new_york"></a></div> 
+                
                   <div id="drag_empty8"></div> 
 
                </div>
