--- a/quiz2/countries_2.html
+++ b/quiz2/countries_2.html
@@ -25,9 +25,9 @@
 <div class="container grey_background"><!-- yes -->
    <div class="row-fluid margin_left_30">
 
-            <div class="col-md-10 col-md-offset-2"><img src="../images/title.png" alt="title e-learning episodes"> </div>
+            <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
-                      <ul class="nav nav-tabs col-md-offset-4" role="tablist">
+                      <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
                          <li class="font_nav_bar_quiz margin_left_35"><a href="../quiz1/space_1.html">&nbsp;Quiz 1&nbsp;</a></li>
                          <li class="active font_nav_bar_quiz"><a href="space_2.html">&nbsp;Quiz 2&nbsp;</a></li>
                          <li class="font_nav_bar_quiz"><a href="../quiz3/space_3.html">&nbsp;Quiz 3&nbsp;</a></li>
@@ -126,31 +126,35 @@
 
                   <div id="drag_empty1"></div> 
 
-                  <div id="drag_country1" class="france"> 
-                  <a href="#" onclick="toggle_visibility('france_text');"><img src="../images/france.png" alt="france"></a></div> 
+                    <div id="drag_country7" class="turkey"> 
+                    <a href="#" onclick="toggle_visibility('turkey_text');"><img src="../images/turkey.png" alt="turkey"></a></a></div> 
 
-                  <div id="drag_empty2"></div> 
+                       <div id="drag_empty2"></div> 
 
                   <div id="drag_country2" class="america"> 
                   <a href="#" onclick="toggle_visibility('USA_text');"> <img src="../images/america.png" alt="america"></a></div> 
 
-                  <div id="drag_country5" class="china"> 
-                    <a href="#" onclick="toggle_visibility('china_text');"><img src="../images/china.png" alt="china"></a></div> 
+                
 
                   <div id="drag_country4" class="spain"> 
                     <a href="#" onclick="toggle_visibility('spain_text');"> <img src="../images/spain.png" alt="spain"></a></div> 
+
+                     <div id="drag_country1" class="france"> 
+                  <a href="#" onclick="toggle_visibility('france_text');"><img src="../images/france.png" alt="france"></a></div> 
                   
                   <div id="drag_country3" class="italy"> 
                     <a href="#" onclick="toggle_visibility('italy_text');"> <img src="../images/italy.png" alt="italy"></a></a></div> 
 
-                  <div id="drag_country6" class="uk"> 
-                   <a href="#" onclick="toggle_visibility('uk_text');"> <img src="../images/uk.png" alt="uk"></a></a></div> 
 
-                  <div id="drag_country7" class="turkey"> 
-                    <a href="#" onclick="toggle_visibility('turkey_text');"><img src="../images/turkey.png" alt="turkey"></a></a></div> 
+
+                      <div id="drag_country5" class="china"> 
+                    <a href="#" onclick="toggle_visibility('china_text');"><img src="../images/china.png" alt="china"></a></div> 
 
                   <div id="drag_empty6"></div> 
                   <div id="drag_empty7"></div> 
+
+                    <div id="drag_country6" class="uk"> 
+                   <a href="#" onclick="toggle_visibility('uk_text');"> <img src="../images/uk.png" alt="uk"></a></a></div> 
 
                   <div id="drag_country8" class="germany"> 
                     <a href="#" onclick="toggle_visibility('germany_text');"><img src="../images/germany.png" alt="germany"></a></a></div> 
