added all php links for heroku

--- a/quiz1/countries_1.html
+++ b/quiz1/countries_1.html
@@ -20,9 +20,9 @@
             <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
                       <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
-                         <li class="active font_nav_bar_quiz margin_left_35"><a href="space_1.html">&nbsp;Quiz 1&nbsp;</a></li>
-                         <li class="font_nav_bar_quiz"><a href="../quiz2/space_2.html">&nbsp;Quiz 2&nbsp;</a></li>
-                         <li class="font_nav_bar_quiz"><a href="../quiz3/space_3.html">&nbsp;Quiz 3&nbsp;</a></li>
+                         <li class="active font_nav_bar_quiz margin_left_35"><a href="../index.php">&nbsp;Quiz 1&nbsp;</a></li>
+                         <li class="font_nav_bar_quiz"><a href="../space_2.php">&nbsp;Quiz 2&nbsp;</a></li>
+                         <li class="font_nav_bar_quiz"><a href="../space_3.php">&nbsp;Quiz 3&nbsp;</a></li>
                      </ul>
               
             </div> <!-- row-fluid -->
@@ -33,10 +33,10 @@
 
                 <div class="col-md-3"></div>
                     <ul class="nav nav-tabs" role="tablist">
-                          <li class="font_nav_bar_subj margin_left_30"><a href="space_1.html">&nbsp;Space&nbsp;</a></li>
-                          <li class="active font_nav_bar_subj"><a href="countries_1.html">&nbsp;Countries&nbsp;</a></li>
-                          <li class="font_nav_bar_subj"><a href="cities_1.html">&nbsp;Cities&nbsp;</a></li>
-                          <li class="font_nav_bar_subj"><a href="biology_1.html">&nbsp;Biology&nbsp;</a></li>
+                          <li class="font_nav_bar_subj margin_left_30"><a href="../index.php">&nbsp;Space&nbsp;</a></li>
+                          <li class="font_nav_bar_subj"><a href="../countries_1.php">&nbsp;Countries&nbsp;</a></li>
+                          <li class="font_nav_bar_subj"><a href="../cities_1.php">&nbsp;Cities&nbsp;</a></li>
+                          <li class="active font_nav_bar_subj"><a href="../biology_1.php">&nbsp;Biology&nbsp;</a></li>
                     </ul>
 
   <div class="col-md-6" style="margin-top:30px;padding-bottom:50px;">
