fixed active in nav

--- a/quiz1/countries_1.html
+++ b/quiz1/countries_1.html
@@ -34,9 +34,9 @@
                 <div class="col-md-3"></div>
                     <ul class="nav nav-tabs" role="tablist">
                           <li class="font_nav_bar_subj margin_left_30"><a href="../index.php">&nbsp;Space&nbsp;</a></li>
-                          <li class="font_nav_bar_subj"><a href="../countries_1.php">&nbsp;Countries&nbsp;</a></li>
+                          <li class="active font_nav_bar_subj"><a href="../countries_1.php">&nbsp;Countries&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="../cities_1.php">&nbsp;Cities&nbsp;</a></li>
-                          <li class="active font_nav_bar_subj"><a href="../biology_1.php">&nbsp;Biology&nbsp;</a></li>
+                          <li class="font_nav_bar_subj"><a href="../biology_1.php">&nbsp;Biology&nbsp;</a></li>
                     </ul>
 
   <div class="col-md-6" style="margin-top:30px;padding-bottom:50px;">
