--- a/quiz2/countries_2.html
+++ b/quiz2/countries_2.html
@@ -28,8 +28,8 @@
             <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
                       <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
-                          <li class="active font_nav_bar_quiz margin_left_35"><a href="../index.php">&nbsp;Quiz 1&nbsp;</a></li>
-                         <li class="font_nav_bar_quiz"><a href="../space_2.php">&nbsp;Quiz 2&nbsp;</a></li>
+                          <li class="font_nav_bar_quiz margin_left_35"><a href="../index.php">&nbsp;Quiz 1&nbsp;</a></li>
+                         <li class="active font_nav_bar_quiz"><a href="../space_2.php">&nbsp;Quiz 2&nbsp;</a></li>
                          <li class="font_nav_bar_quiz"><a href="../space_3.php">&nbsp;Quiz 3&nbsp;</a></li>
                      </ul>
               
@@ -42,9 +42,9 @@
                <div class="col-md-3"><button type="submit" class="btn btn-primary margin_top_button button_css">Change Theme</button></div>
                     <ul class="nav nav-tabs" role="tablist">
                            <li class="font_nav_bar_subj margin_left_30"><a href="../space_2.php">&nbsp;Space&nbsp;</a></li>
-                          <li class="font_nav_bar_subj"><a href="../countries_2.php">&nbsp;Countries&nbsp;</a></li>
+                          <li class="active font_nav_bar_subj"><a href="../countries_2.php">&nbsp;Countries&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="../cities_2.php">&nbsp;Cities&nbsp;</a></li>
-                          <li class="active font_nav_bar_subj"><a href="../biology_2.php">&nbsp;Biology&nbsp;</a></li>
+                          <li class="font_nav_bar_subj"><a href="../biology_2.php">&nbsp;Biology&nbsp;</a></li>
                     </ul>
 
  <div class="col-md-12" style="margin-top:10px;">
