added notepad to Q2 space

--- a/quiz2/space_2.html
+++ b/quiz2/space_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-framework="angular.js" ng-app="noteApp">
 <head>
     <meta charset="utf-8">
     
@@ -16,8 +16,15 @@
     <!--<link type="text/css" rel="stylesheet" href="../css/jquery-ui.min.css" />-->
     <link type="text/css" rel="stylesheet" href="../css/jquery-ui.structure.min.css" />
     <!--<link type="text/css" rel="stylesheet" href="../css/jquery-ui.theme.min.css" />-->
+    <link rel="stylesheet" href="../css/notepad.css" />
+<script>
+    document.write('<base href="' + document.location + '" />');
+  </script>
 
-   
+   <script data-require="jquery@*" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+  <script data-require="angular.js@1.0.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js" data-semver="1.0.8"></script>
+  <script src="../js/app.js"></script>
+
 </head>
 
 
@@ -39,7 +46,8 @@
 
        <div class="row-fluid">
 
-                <div class="col-md-3"><button type="submit" class="btn btn-primary margin_top_button button_css">Change Theme</button></div>
+                <div class="col-md-3"><button type="submit" class="btn btn-primary margin_top_button button_css">Change Theme</button>
+                 <button type="submit" id="notepad_btn" class="btn btn-primary margin_top_button">Notepad</button></div>
                     <ul class="nav nav-tabs" role="tablist">
                           <li class="active font_nav_bar_subj margin_left_30"><a href="../space_2.php">&nbsp;Space&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="../countries_2.php">&nbsp;Countries&nbsp;</a></li>
@@ -49,6 +57,9 @@
 
 
  <div class="col-md-12" style="margin-top:10px;">
+
+
+
            <div class="Arial_Rd_Grey_30 margin_top_btm_15">Arrange our Solar System</div>
 
            <div id="bigrow_space" class="bigrow_space">
@@ -273,6 +284,11 @@
                </div>
                 </div>
 
+
+<div id="notepad">
+  <notepad/>
+</div>
+
   </div><!-- span12-->
 
 
@@ -293,6 +309,7 @@
 <script type="text/javascript" src="../js/jquery-ui.min.js"></script>-->
 <script type="text/javascript" src="../js/quiz2_dragdrop_space2.js"></script>
 <script type="text/javascript" src="../js/hide_div.js"></script>
+<script type="text/javascript" src="../js/hide_notepad.js"></script>
 <script type="text/javascript" src="../js/toggle_css.js"></script>
 
 
