--- a/quiz2/space_2.html
+++ b/quiz2/space_2.html
@@ -301,7 +301,7 @@
 </div> <!-- container grey background -->
 
 
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+ <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
     <script src=" http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script>
     <script src="../js/bootstrap.js"></script>
 <script type="text/javascript" src="../js/bootstrap.min.js"></script>
