--- a/quiz2/space_2.html
+++ b/quiz2/space_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-framework="angular.js" ng-app="noteApp">
+<html lang="en" ng-app="noteApp">
 <head>
     <meta charset="utf-8">
     
@@ -22,8 +22,7 @@
   </script>
 
    <script data-require="jquery@*" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
- <!-- <script data-require="angular.js@1.0.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js" data-semver="1.0.8"></script>-->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+  <script data-require="angular.js@1.0.x" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js" data-semver="1.0.8"></script>
   <script src="../js/app.js"></script>
 
 </head>
