added SCORE to Q2

--- a/quiz2/cities_2.html
+++ b/quiz2/cities_2.html
@@ -47,12 +47,28 @@
 
                 <div class="col-md-3"><button type="submit" class="btn btn-primary margin_top_button button_css">Change Theme</button>
                  <button type="submit" id="notepad_btn" class="btn btn-primary margin_top_button">Notepad</button></div>
+                     <div class="col-md-6"> 
                     <ul class="nav nav-tabs" role="tablist">
                           <li class="font_nav_bar_subj margin_left_30"><a href="../space_2.php">&nbsp;Space&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="../countries_2.php">&nbsp;Countries&nbsp;</a></li>
                           <li class="active font_nav_bar_subj"><a href="../cities_2.php">&nbsp;Cities&nbsp;</a></li>
                           <li class="font_nav_bar_subj"><a href="../biology_2.php">&nbsp;Biology&nbsp;</a></li>
                     </ul>
+                     </div><!-- col-md-6 -->
+
+                    <div class="col-md-3">
+                        
+                            <div id="score_textQ2" style="padding-top:25px;">
+                            <span class="Arial_Rd_blue24">SCORE</span>
+                            </div><!-- score_text-->
+
+                            <div id="scoreQ2">
+                              <span class="Arial_Rd_Blue_30"></span>
+                            </div> <!-- score-->
+                         
+                       </div><!-- row-fluid -->     
+
+       </div>
 
  <div class="col-md-12" style="margin-top:10px;">
           <div class="margin_top_btm_15 Arial_Rd_Grey_30">Arrange these Cities in order of population </div>
