adding all podcasts

--- a/quiz3/cities_3.html
+++ b/quiz3/cities_3.html
@@ -136,25 +136,25 @@
         <div class="col-md-4"><!--yes-->
           <div id="audio" ng-controller="Ctrl"> <!--yes-->
             <p class="Arial_Rd_Grey_25">Listen to related podcasts </br>for further study</p>
-            <p class="font_planet_para_bold">First we have a dicussion on</p>
+            <p class="font_planet_para_bold">New York's first apartment building</p>
              <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://hwcdn.libsyn.com/p/b/3/7/b3785be44e7b55b9/131_The_First_Apartment_Building.mp3?c_id=4009338&amp;expiration=1407012959&amp;hwt=113c3346b72ff21ddb1e03edd73e2837" type="audio/mpeg">
+                        <embed height="50" width="" src="http://hwcdn.libsyn.com/p/b/3/7/b3785be44e7b55b9/131_The_First_Apartment_Building.mp3?c_id=4009338&amp;expiration=1407012959&amp;hwt=113c3346b72ff21ddb1e03edd73e2837">
                       </audio>  
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Here is a quick talk about..</p>
+              <p class="font_planet_para_bold">Old and new accomodation in Tokyo</p>
                <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.hostelworld.com/static/episodes/TheOldAndTheNew.mp3" type="audio/mpeg">
+                        <embed height="50" width="" src="http://www.hostelworld.com/static/episodes/TheOldAndTheNew.mp3">
                       </audio>
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Finally we hear about...</p>
+              <p class="font_planet_para_bold">Shanghai architectural styles</p>
                 <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                       <source src="http://www.hostelworld.com/static/episodes/onlyinshanghai.mp3" type="audio/mpeg">
+                        <embed height="50" width="100" src="http://www.hostelworld.com/static/episodes/onlyinshanghai.mp3">
                       </audio>
               </div><!-- details1.show -->
                
