--- a/quiz3/countries_3.html
+++ b/quiz3/countries_3.html
@@ -137,25 +137,25 @@
         <div class="col-md-4"><!--yes-->
           <div id="audio" ng-controller="Ctrl"> <!--yes-->
             <p class="Arial_Rd_Grey_25">Listen to related podcasts </br>for further study</p>
-            <p class="font_planet_para_bold">First we have a dicussion on</p>
+            <p class="font_planet_para_bold">A tour of the British Museum </p>
              <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.hostelworld.com/static/episodes/london-inside-the-british-museum.mp3" type="audio/mpeg">
+                        <embed height="50" width="" src="http://www.hostelworld.com/static/episodes/london-inside-the-british-museum.mp3">
                       </audio>  
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Here is a quick talk about..</p>
+              <p class="font_planet_para_bold">Germany's capital Berlin</p>
                <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://audio.theguardian.tv/sys-audio/Travel/WorldCupGuides/2006/06/07/BerlinGuide.mp3" type="audio/mpeg">
+                        <embed height="50" width="" src="http://audio.theguardian.tv/sys-audio/Travel/WorldCupGuides/2006/06/07/BerlinGuide.mp3">
                       </audio>
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Finally we hear about...</p>
+              <p class="font_planet_para_bold">The Italian capital Rome</p>
                 <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                       <source src="http://audio.theguardian.tv/sys-audio/Travel/Cityguides/2006/04/13/rome130406.mp3" type="audio/mpeg">
+                        <embed height="50" width="100" src="http://audio.theguardian.tv/sys-audio/Travel/Cityguides/2006/04/13/rome130406.mp3">
                       </audio>
               </div><!-- details1.show -->
                
