--- a/quiz3/space_3.html
+++ b/quiz3/space_3.html
@@ -139,26 +139,26 @@
  
         <div class="col-md-4"><!--yes-->
           <div id="audio" ng-controller="Ctrl"> <!--yes-->
-            <p class="Arial_Rd_Grey_25">Listen to related podcasts </br>for further study</p>
-            <p class="font_planet_para_bold">First we have a dicussion on</p>
+             <p class="Arial_Rd_Grey_25">Listen to related </br>podcasts for further study</p>
+            <p class="font_planet_para_bold">Where did the sun originate?</p>
              <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=9DFB2C66-C252-4D4C-846112D463CBACE5" type="audio/mpeg">
+                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=9DFB2C66-C252-4D4C-846112D463CBACE5">
                       </audio>  
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Here is a quick talk about..</p>
+              <p class="font_planet_para_bold">Loss of the Martian atmosphere</p>
                <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=55785A23-CA7B-4596-BCDD085703AD8526" type="audio/mpeg">
+                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=55785A23-CA7B-4596-BCDD085703AD8526">
                       </audio>
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Finally we hear about...</p>
+              <p class="font_planet_para_bold">5 billion years of solitude, the search for </br>life among the stars</p>
                 <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=57093753-3EB8-4876-8C6957295B8297C4" type="audio/mpeg">
+                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=57093753-3EB8-4876-8C6957295B8297C4">
                       </audio>
               </div><!-- details1.show -->
                
